# app

./: .gitignore  Cargo.toml  com.lepsistemas.SteamProTipsAI.desktop  launch.sh  pyproject.toml  requirements.txt  steamprotipsai.desktop  steamprotipsai.yaml
.cargo/: config.toml
.github/workflows/: tests.yml
flatpak/: com.lepsistemas.SteamProTipsAI-dev.yaml  com.lepsistemas.SteamProTipsAI.json  com.lepsistemas.SteamProTipsAI.yaml  steamprotipsai.yaml
src/: gui.rs  main.rs  watcher.rs
src/steamprotipsai/: cli_main.py  main.py
src/steamprotipsai/adapters/: hotkey_evdev.py  main_window.py  mock_game_detector.py  mock_gpt_client.py  mock_input.py  mock_screenshot.py  screenshot_watcher.py
src/steamprotipsai/core/: app.py  ports.py
tests/: test_cli_main.py  test_core_app.py  test_edev_listener.py
