[project]
name = "steamprotipsai"
version = "0.1.0"
description = ""
authors = [
    {name = "Lep Sistemas",email = "lepsistemas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evdev (>=1.9.2,<2.0.0) ; sys_platform == \"linux\""
]

[tool.poetry]
packages = [
    { include = "steamprotipsai", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
