[tool.poetry]
name = "steamprotipsai"
version = "0.1.0"
description = ""
authors = ["Lep Sistemas <lepsistemas@gmail.com>"]
readme = "README.md"
packages = [{ include = "steamprotipsai", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
watchdog = "^6.0.0"
pygobject = { version = "^3.52.0", markers = "sys_platform == 'linux'" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"